# cookiecutter-pyproject

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml  tests.py
.github/workflows/: apply.yml  commitlint.yml  pre-commit.yml  release.yml  test.yml
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
{{cookiecutter.package_name}}/.github/workflows/: codecov.yml  docs.yml  lint.yml  release_package.yml  test.yml
{{cookiecutter.package_name}}/tests/: test_cli.py  test_python_package.py  test_{{cookiecutter.module_name}}.py
{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/: __init__.py  cli.py
{{cookiecutter.project_kebab}}/: README.md  pyproject.toml
{{cookiecutter.project_kebab}}/tests/: test_python_package.py
{{cookiecutter.repo_name}}/: README.md  pyproject.toml
{{cookiecutter.repo_name}}/tests/: test_python_package.py
