[tool.poetry]
name = "python-package-cookiecutter"
version = "0.1.0"
description = ""
authors = ["91nunocosta <91nunocosta@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "python_package_cookiecutter.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cookies = "^0.6.1"
black = "^23.1.0"
tox = "^4.4.4"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s"
testpaths = "tests.py"
