[tool.poetry]
name = "python-package-cookiecutter"
version = "0.9.0"
description = ""
authors = ["91nunocosta <91nunocosta@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "python_package_cookiecutter.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cookies = "^0.6.1"
black = "^23.1.0"
tox = "^4.4.4"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s -x"
testpaths = "tests.py"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
version_pattern = [
    "./{{cookiecutter.package_name}}/README.md:https://github.com/91nunocosta/python-package-cookiecutter/releases/tag/v{version}"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
