[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
license = "MIT"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
repository = "{{ cookiecutter.repository }}"
documentation = "{{ cookiecutter.docs }}"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
tox = "^3.24.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.cd]
optional = true

[tool.poetry.group.cd.dependencies]
pdoc = "^12.3.1"
python-semantic-release = "^7.33.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "{{ cookiecutter.module_name }}/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
