[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
{% if cookiecutter.opensource == "yes" -%}
license = "MIT"
{% endif -%}
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
repository = "{{ cookiecutter.repository }}"
documentation = "{{ cookiecutter.docs }}"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.15.0"
mypy = "^1.0.0"
pylint = "^2.16.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^12.3.1"

[tool.poetry.group.cd]
optional = true

[tool.poetry.group.cd.dependencies]
python-semantic-release = "^7.33.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "{{ cookiecutter.module_name }}/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
build_command = "pip install poetry && poetry build"
upload_to_release = true
{% if cookiecutter.opensource == "yes" %}
upload_to_repository = true
{% elif cookiecutter.opensource == "no" %}
upload_to_repository = false
repository_url = ""
{% endif -%}
