[tool.poetry]
name = "{{cookiecutter.project_kebab}}"
version = "{{cookiecutter.project_version}}"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
nox-poetry = "^0.8.6"
coverage-badge = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
